Blazor interop for show_desktop

--- a/src/Vs.Os.Wasm/Client/Shared/Components/StartBar.razor
+++ b/src/Vs.Os.Wasm/Client/Shared/Components/StartBar.razor
@@ -1,6 +1,6 @@
 ﻿@using Vs.Os.Wasm.Shared.Components
 <div class="abs" id="bar_bottom">
-    <a class="float_left" href="#" id="show_desktop" title="Show Desktop">
+    <a class="float_left" href="#" id="show_desktop" title="Show Desktop" @onclick="ShowDesktop">
         <img src="assets/images/icons/icon_22_desktop.png" />
     </a>
     <ul id="dock">
