Blazor interop for icon click

--- a/src/Vs.Os.Wasm/Client/Shared/Components/DesktopIcon.razor
+++ b/src/Vs.Os.Wasm/Client/Shared/Components/DesktopIcon.razor
@@ -1,4 +1,4 @@
-﻿<a class="abs icon" style="left:@(X)px;top:@(Y)px;" href="#icon_dock_@Handle">
+﻿<a @ref="element" class="abs icon" style="left:@(X)px;top:@(Y)px;" href="#icon_dock_@Handle" @ondblclick="ShowWindow">
     <img src="assets/images/icons/@Icon" />
     @Label
 </a>
