Blazor interop for focus_window

--- a/src/Vs.Os.Wasm/Client/Shared/Components/Window.razor
+++ b/src/Vs.Os.Wasm/Client/Shared/Components/Window.razor
@@ -1,4 +1,4 @@
-﻿<div id="window_@Handle" class="abs window" style="left:@(X)px;top:@(Y)px;">
+﻿<div @ref="element" @onmousedown="FocusWindow" id="window_@Handle" class="abs window" style="left:@(X)px;top:@(Y)px;">
     <div class="abs window_inner">
         <div class="window_top">
             <span class="float_left">
